@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-09
+2012-06-07 Andy Salnikov
+- DumpTimepix.cpp: add comment about Timepix::DataV1 class 
+
 Tag: V00-02-08
 2012-06-03 Andy Salnikov
 - added code to dump new type CsPad::ConfigV4
